package a.b;

message ImportedMessage {
    optional bool i = 1;
}
